Add example for JEP 442